# volosti-server-sanic

./: README.rst  pyproject.toml
tests/: test_wui_main.py
volosti_server_sanic/: app.py
volosti_server_sanic/wui/: __init__.py  main.py
