
[tool.poetry]
name = "volosti-server-sanic"
version = "0.1.dev0"
description = "Разрабатываемая реализация сервера Волостей на веб-фреймворке Sanic"
license = "MIT"

authors = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]
maintainers = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]

readme = "README.rst"
homepage = "https://pypi.org/project/volosti-server-sanic"
repository = "https://github.com/volosti/volosti-server-sanic"

keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = { version = "^20.1.0", optional = true }
sanic = "^22.6.1"
uvicorn = { version = ">=0.18.2", optional = true }

[tool.poetry.extras]
gunicorn = ["gunicorn"]
uvicorn = ["uvicorn"]
all = [
    "gunicorn",
    "uvicorn",
]

[tool.poetry.dev-dependencies]
flake8 = "^5.0.3"
isort = "^5.10.1"
mypy = ">=0.971"
pytest = "^7.1.2"
pytest-asyncio = ">=0.19.0"
pytest-cov = "^3.0.0"
sanic-testing = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "wemake"
src_paths = ["volosti_server_sanic", "tests"]

[tool.mypy]
files = ["volosti_server_sanic", "tests"]
